fixed alignment (again), this time for all browsers

--- a/src/components/Overview/Overview.css
+++ b/src/components/Overview/Overview.css
@@ -142,11 +142,10 @@ img {
 }
 .watchStyle{
     position: absolute;
-    margin-top: 2px;
+    margin-top: 1px;
     left: 31px;
     right: 0px;
     font-weight: 600;
-    line-height: 24px;
 }
 
 
